--- a/app/views/vacancies/_form.html.haml
+++ b/app/views/vacancies/_form.html.haml
@@ -4,5 +4,6 @@
     = f.input :validity, as: :string, input_html: { placeholder: 'Дата', class: 'datepicker' }
     = f.input :salary
     = f.input :contacts
+    = f.input :skill_list, input_html: { id: 'skills' }
 
     = f.submit "Сохранить", class: 'btn btn-primary'
