--- a/app/views/employees/_form.html.haml
+++ b/app/views/employees/_form.html.haml
@@ -4,5 +4,6 @@
     = f.input :status, as: :radio_buttons, collection: Employee::STATUS.map{ |i| [ t("activerecord.attributes.employee.statuses.#{i}"), i ] }
     = f.input :salary
     = f.input :contacts
+    = f.input :skill_list, input_html: { id: 'skills' }
 
     = f.submit "Сохранить", class: 'btn btn-primary'
