--- a/app/views/vacancies/show.html.haml
+++ b/app/views/vacancies/show.html.haml
@@ -23,3 +23,12 @@
       %td= @vacancy.contacts
 
 = link_to 'Редактировать вакансию', edit_vacancy_path(@vacancy), class: 'btn btn-default'
+%br/
+%br/
+.panel.panel-default
+  .panel-heading Список полностью подходящих работников
+  = render 'employees/list', employees: @fully_suitable
+
+.panel.panel-default
+  .panel-heading Список частично подходящих работников
+  = render 'employees/list', employees: @suitable
